@@ -10,6 +10,7 @@ Noteworthy changes in release 1.4
   - auxiliary fields in bam1_t are now always stored in little-endian byte
     order (previously this depended on if you read a bam, sam or cram file)
   - bam_aux2i() now returns an int64_t value
+  - fai_load() will no longer save local copies of remote fasta indexes
 
 * New errmod_cal(), probaln_glocal(), sam_cap_mapq(), and sam_prob_realn()
   functions, previously internal to SAMtools, have been added to HTSlib.
@@ -46,6 +47,9 @@ Noteworthy changes in release 1.4
   of integer tags (as a double) as well as floating-point ones.  All of
   the bam_aux2 and bam_auxB2 functions will set errno if the requested
   conversion is not valid.
+
+* New functions fai_load3() and fai_build3() allow fasta indexes to be
+  stored in a different location to the indexed fasta file.
 
 Noteworthy changes in release 1.3.2  (13 September 2016)
 
